updated configuration files for java 17 migration