@@ -12,5 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-java $JAVA_OPTS -jar /app.jar
+# --add-opens args used to open modules and allow illegal(reflection\private classes and fields) access from the code.
+java $JAVA_OPTS --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED -jar /app.jar
